# file_organizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: config.example.json
src/file_organizer/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_config.py  organizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_organizer.py
